# cpp_indie_studio

./: .gitignore  AppManager.cpp  AppManager.hh  CMakeLists.txt  main.cpp  runscript.sh
Media/: ninja.material
Media/scripts/: ground.material  ninja.material
indie_server/: CMakeLists.txt  indie_server  server.ini
indie_server/maps/: DickMap  arena  hangar  level0
indie_server/scores/: Arnaud.score  Baptiste.score  Erwan.score  Guillaume.score  Thibaud.score  Victorien.score
indie_server/srcs/: ConfParser.cpp  ConfParser.hh  Game.cpp  Game.hh  GameManager.cpp  GameManager.hh  ISocket.h  LinuxSocket.cpp  LinuxSocket.h  Room.cpp  Room.hh  Router.cpp  Router.hh  Server.cpp  Server.h  main.cpp
indie_server/srcs/MapParser/: MapParser.cpp  MapParser.hh
resources/: plugins.cfg  resources.cfg
resources/Media/MyGUI_Media/: MyGUI_BlueWhiteTemplates.xml  MyGUI_Fonts.xml
resources/Media/models/: Ally.mesh  BombUp.mesh  Enemy.mesh  SpeedUp.mesh  bomb.mesh  extend.mesh  human.mesh  tmp.mesh
resources/Media/scripts/: Ally.material  Bomb.material  BombUp.material  Enemy.material  Ground.material  MapOverview.material  Particles.material  basemesh.material  boot.material  character.material  cube.material  extend.material  tron.material
resources/maps/: level0
srcs/: main.cpp
srcs/Bomberman/: Bomberman.cpp  Bomberman.hh
srcs/Config/: Config.cpp  Config.hh
srcs/DataManager/: DataManager.cpp  DataManager.h
srcs/Entities/: AEntity.cpp  AEntity.hh  Block.cpp  Block.hh  Bomb.cpp  Bomb.h  BreakableBlock.cpp  BreakableBlock.hh  EntityManager.cpp  EntityManager.hh  ExplosableEntity.cpp  ExplosableEntity.hh  Explosion.cpp  Explosion.hh
srcs/EventListener/: AEventRegister.hh  EventListener.cpp  EventListener.hh
srcs/Exception/: Exception.cpp  Exception.hh
srcs/GUI/: AViewController.cpp  AViewController.hh  GlobalRankingViewController.cpp  GlobalRankingViewController.hh  LoginViewController.cpp  LoginViewController.hh  RoomListViewController.cpp  RoomListViewController.hh  RootViewController.cpp  RootViewController.hh  WaitingRoomViewController.cpp  WaitingRoomViewController.hh
srcs/GUI/BackgroundController/: BackgroundImageController.cpp  BackgroundImageController.hh  BackgroundMapController.cpp  BackgroundMapController.hh
srcs/Map/: Map.cpp  Map.h
srcs/MapParser/: MapParser.cpp  MapParser.hh
srcs/Models/: Room.cpp  Room.hh
srcs/Particle/: Particle.cpp  Particle.hh
srcs/Player/: AI.cpp  AI.hh  APlayer.cpp  APlayer.hh  HumanPlayer.cpp  HumanPlayer.hh
srcs/PowerUp/: BombUp.cpp  BombUp.hh  BoostUp.cpp  BoostUp.hh  ExtendBoost.cpp  ExtendBoost.hh  PowerUp.cpp  PowerUp.hh  SpeedBoost.cpp  SpeedBoost.hh
srcs/SceneDisplayer/: SceneDisplayer.cpp  SceneDisplayer.hh
srcs/ServerPars/: LinuxSocket.cpp  Server.cpp  Server.h  parser.cpp  parser.hpp
srcs/Socket/: ASocket.hh  SocketLinux.cpp  SocketLinux.hh
srcs/SoundManager/: SoundManager.cpp  SoundManager.hh
srcs/UserManager/: User.cpp  User.hh
